Update and clean up rebar.{config,lock}
Use doc and test profiles to separate concerns.

--- a/rebar.config
+++ b/rebar.config
@@ -1,15 +1,28 @@
 {erl_opts, [debug_info]}.
 {lfe_first_files, ["src/clj-p.lfe"]}.
-{eunit_compile_opts, [
-    {src_dirs, ["test", "src"]}
-  ]}.
 {deps, [
-    {lfe, ".*", {git, "git://github.com/rvirding/lfe.git", {tag, "v0.10.1"}}},
-    {kla, ".*", {git, "git://github.com/lfex/kla.git", {tag, "0.5.1"}}}
+    {lfe, {git, "git://github.com/rvirding/lfe.git", {tag, "1.0"}}},
+    {kla, {git, "git://github.com/lfex/kla.git", {tag, "0.6.0"}}}
   ]}.
 {plugins, [
-   {'lfe-compile', ".*", {git, "https://github.com/lfe-rebar3/compile.git", {tag, "0.2.2"}}}
+    {'lfe-compile', {git, "git://github.com/lfe-rebar3/compile.git", {tag, "0.3.0"}}}
   ]}.
 {provider_hooks, [
-   {pre, [{compile, {lfe, compile}}]}
+    {pre, [{compile, {lfe, compile}}]}
+  ]}.
+{profiles, [
+    {doc,
+     [{plugins,
+       [{lodox,
+         {git, "git://github.com/quasiquoting/lodox.git",
+          {tag, "0.12.8"}}}]},
+      {lodox,
+       [{apps,
+         [{lodox,
+           [{'source-uri',
+             "https://github.com/lfex/clj/blob/{version}/{filepath}#L{line}"}]}]}]}]},
+    {test,
+     [{eunit_compile_opts, [{src_dirs, ["test", "src"]}]},
+      {deps,
+       [{ltest, {git, "git://github.com/lfex/ltest.git", {tag, "0.7.1"}}}]}]}
   ]}.
