Prepare Hex release
- Bump to 0.5.0
- s/kla/clj/ lfe.config
- Use Hex packages for lfe, kla and rebar3_lfe_compile
- Use my fork of ltest for now
- Add metadata to clj.app.src

--- a/rebar.config
+++ b/rebar.config
@@ -6,15 +6,18 @@
     {src_dirs, ["test", "src"]}
   ]}.
 
-{deps, [
-    {lfe, ".*", {git, "git://github.com/rvirding/lfe.git", {tag, "v1.0"}}},
-    {kla, ".*", {git, "git://github.com/lfex/kla.git", {tag, "0.6.0"}}}
-  ]}.
+{deps, [lfe, kla]}.
 
-{plugins, [
-   {'lfe-compile', ".*", {git, "https://github.com/lfe-rebar3/compile.git", {tag, "0.3.0"}}}
-  ]}.
+{plugins, [rebar3_lfe_compile]}.
 
 {provider_hooks, [
    {pre, [{compile, {lfe, compile}}]}
+  ]}.
+
+{profiles, [
+   {test, [
+      {deps, [
+         {ltest, {git, "https://github.com/yurrriq/ltest.git", {branch, "develop"}}}
+        ]}
+     ]}
   ]}.
