--- a/lfe.config
+++ b/lfe.config
@@ -2,11 +2,11 @@
   (#(meta
      (#(name kla)
       #(description "Clojure functions and macros for LFE")
-      #(version "0.4.0")
+      #(version "0.5.0")
       #(keywords ("LFE" "Lisp" "Library" "Utility" "Clojure"))
       #(maintainers
         ((#(name "Duncan McGreggor") #(email "oubiwann@gmail.com"))))
       #(repos
-        (#(github "lfex/kla")))))
+        (#(github "lfex/clj")))))
    #(app
-     (#(mod #(kla ()))))
+     (#(mod #(clj ()))))
